--- a/main.css
+++ b/main.css
@@ -18,10 +18,63 @@ body {
 .left{
     width: 75vw;
     padding: 1em;
+    background-image: url(/Assets/frame.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .right {
     width: 25vw;
     background-color: lightgray;
-    padding: 1em;
+    padding: 1vw;
+}
+
+
+.funniFont {
+    font-family: Mid;
+}
+
+.theTextThatDoesNotChange {
+    font-size:5rem;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+h2 {
+    font-size: 4rem;
+    margin-right:30px
+    
+}
+
+* {
+    font-family: mid;
+    color: black;
+
+    
+}
+
+#type {
+    width:23vw;
+    font-size:2rem;
+    font-weight: bold;
+}
+
+#button {
+    width:23vw;
+    font-size:2rem;
+    font-weight: bold;
+}
+
+#name {
+    width:23vw;
+    font-size:2rem;
+    font-weight: bold;
+}
+
+
+h1 {
+    margin-bottom: -50px;
+    
 }
