--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
     font-family: Mid;
     src: url(./Assets/Font/Mediocrity-Regular.ttf);
 }
+
 body {
     margin: 0;
 }
@@ -15,7 +16,7 @@ body {
     height: 100vh;
 }
 
-.left{
+.left {
     width: 75vw;
     padding: 1em;
     background-image: url(/Assets/frame.png);
@@ -35,46 +36,72 @@ body {
 }
 
 .theTextThatDoesNotChange {
-    font-size:5rem;
-    display:flex;
+    font-size: 5rem;
+    display: flex;
     align-items: center;
     flex-direction: column;
-    
+
 }
 
 h2 {
     font-size: 4rem;
-    margin-right:30px
-    
+    margin-right: 30px
 }
 
 * {
     font-family: mid;
     color: black;
 
-    
+
 }
 
 #type {
-    width:23vw;
-    font-size:2rem;
+    width: 23vw;
+    font-size: 2rem;
     font-weight: bold;
 }
 
 #button {
-    width:23vw;
-    font-size:2rem;
+    width: 23vw;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+#print {
+    width: 23vw;
+    font-size: 2rem;
     font-weight: bold;
 }
 
 #name {
-    width:23vw;
-    font-size:2rem;
+    width: 23vw;
+    font-size: 2rem;
     font-weight: bold;
 }
 
 
 h1 {
     margin-bottom: -50px;
-    
+
+}
+
+h3 {
+    margin-top: 50px;
+    font-size: 10rem;
+}
+
+.what {
+    display:flex;
+}
+
+
+h4 {
+    font-size: 1.5rem;
+    margin-right: 600px;
+}
+
+@media print {
+    .right {
+        display: none;
+    }
 }
